--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "prettier": "2.8.4",
+    "sass": "^1.59.2",
     "typescript": "^5.0.2",
     "vite": "^4.1.0"
   }
